# Maksum_Filyas

./: customer.py
drone_patterns_lab/: README.md  pyproject.toml
drone_patterns_lab/docs/: design.md
drone_patterns_lab/drones/api/: endpoints.py  server.py
drone_patterns_lab/drones/bridge/: __init__.py  air.py  base.py  controller.py  sea.py  surface.py
drone_patterns_lab/drones/config/: mission_config.py
drone_patterns_lab/drones/cor/: __init__.py  adjust_altitude_handler.py  base.py  emergency_land_handler.py  reroute_handler.py  swarm_reassign_handler.py
drone_patterns_lab/drones/environment/: __init__.py  air_env.py  base.py  sea_env.py  surface_env.py
drone_patterns_lab/drones/factory/: config_loader.py  mission_factory.py
drone_patterns_lab/drones/missions/: __init__.py  agriculture.py  defects_detection.py  pollution_monitoring.py  rescue.py  sea_exploration.py
drone_patterns_lab/drones/observer/: __init__.py  event_bus.py  events.py
drone_patterns_lab/drones/strategy/: __init__.py  base.py  crack_reaction.py  wave_reaction.py  wind_reaction.py
drone_patterns_lab/drones/template/: __init__.py  base.py
drone_patterns_lab/drones/utils/: __init__.py  logger.py  math_utils.py  persistence.py  telemetry.py
drone_patterns_lab/style/: index.html  styles.css
drone_patterns_lab/tests/integration/: test_mission_end_to_end.py
drone_patterns_lab/tests/integration/unit/: test_bridge.py  test_cor.py  test_observer.py  test_strategy.py  test_template.py
lab1/: customer.py  main.py
лаб 3 патерни/: courses.py  courseworks.py  factories.py  (+6 more)
(+51 files in other folders)
